# cellar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap  cogrc  configure.ac
cmake/Modules/: Git.cmake  Ronn.cmake
doc/: cellar.1.ronn
include/: ansicol.hpp  bottles.hpp  cellar.hpp  commands.hpp  config.hpp  fs.hpp  help.hpp  launch.hpp  output.hpp  paths.hpp  version.hpp
include/internal/: bottles.hpp  bottles.hpp.cog  config.hpp.cog  core.hpp.cog  launch.hpp.cog
src/: Makefile.am  bottles.cpp  bottles.hpp  cellar.cpp  cellar.cpp.cog  commands.cpp  commands.cpp.cog  commands.hpp  commands.txt  fs.cpp  modules.txt  output.cpp  version.cpp.cog  version.hpp
src/bottles/: activate.cpp  active.cpp  bottles.cpp  commands.cpp.cog  commands.txt  cork.cpp  create.cpp  press.cpp  remove.cpp
src/bottles/config/: cli_handler.cpp  save_load.cpp
src/bottles/help/: activate  active  config  cork  create  list  press  remove  uncork
src/config/: cli_handler.cpp  commands.txt  defaults.cpp.cog  save_load.cpp
src/core/: cellar.cpp.cog  commands.txt  fs.cpp  paths.cpp  version.cpp.cog
src/core/help/: help
src/help/: descriptions.cpp  details.cpp  help.cpp  version
src/launch/: commands.cpp.cog  commands.txt  launch.cpp  shortcuts.cpp  winetricks.cpp
src/launch/help/: launch  regedit  winecfg  winetricks
src/paths/: drive_letters.cpp
